src/main/java/com/example/ncsproject/global/error/GlobalExceptionHandler.java
package com.example.ncsproject.global.error;public class GlobalExceptionHandler {
}
